# exaparsec

./: LICENSE  README.md  cabal.project  exaparsec.cabal  flake.nix  hie.yaml
.github/workflows/: CI.yaml
test/: Spec.hs
